fixed/last fixed before endPoints impl